# smap

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: main.yml
src/: App.tsx  global.css  input.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
